[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Anders Lindén <hello_world@anders.dev>"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
utilities = { path = "utilities" }

[[bin]]
name = "template"
path = "src/template.rs"

[[bin]]
name = "day_01"
path = "src/day_01.rs"

[[bin]]
name = "day_02"
path = "src/day_02.rs"

[[bin]]
name = "day_03"
path = "src/day_03.rs"

[[bin]]
name = "day_04"
path = "src/day_04.rs"
